--- a/valid_certificate/curd_operations/curd_app/templates/curd_app/student_confirm_delete.html
+++ b/valid_certificate/curd_operations/curd_app/templates/curd_app/student_confirm_delete.html
@@ -20,7 +20,7 @@
   <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Yes, delete</button>
-    <a href="{% url 'student_list' %}" class="btn btn-secondary">Cancel</a>
+    <a href="{% url 'index' %}" class="btn btn-secondary">Cancel</a>
   </form>
   {% endblock %}
 </div>
